2003-06-16  Tim Waugh  <twaugh@redhat.com>
	* src/FamilyView.py (north_american): Fixed traceback when adding
	a new child in the family view.

2003-06-16  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/FtmStyleAncestors.py, src/plugins/FtmStyleDescendants.py:
	Remove options_dialog function -- it is not nedded anymore. 

2003-06-14  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps.glade: added select/edit buttions to family view
	* src/SelectChild.py: change title from Add Children to Add Child
	to Family
	* src/FamilyView: add support for adding spouse/child with full
	Edit Person window, along with old method of adding via selectors

2003-06-14  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/IndivComplete.py (write_fact): Enable translation
	for the event name; 
	* (get_stylesheet_savefile): Change the name of xml file (and,
	consequently, the target filename) -- was confused with family group.
	* src/StyleEditor.py (save_paragraph): Call gfloat instead of float.
	* src/TextDoc.py (SheetParser.startElement): Likewise.
	* src/Utils.py: Provide a locale-aware string formatting conversion
	into C-locale string (for saving floats in XML)
	* src/StyleEditor.py (draw): Call locale.str instead of str.
	* src/TextDoc.py (StyleSheetList.save): Call gformat instead of '%f'.
	* src/AutoComp.py (AutoCombo.timer_callback): Fix autocompletion
	so that the typed portion of the text is always visible.

2003-06-14  Don Allingham  <dallingham@users.sourceforge.net>
	* src/preferences.glade: Don't immediately show preferences dialog
	* src/GrampsCfg.py: Handle new callback for preferences dialog
	* src/gramps_main.py: Pass update_display instead of full_update to
	loadConfig to prevent the displaying of multiple entries on the display.
	* src/Utils.py: provide a locale independant floating point conversion
	utility
	* src/TextDoc.py: call new gfloat utility instead of float
	* src/PaperMenu.py: call new gfloat utility instead of float
	